# ROS

./: cribnotes.md  exampleCode.txt  tmp.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pectoral_fin_actuators_topic/: pectoral_fin_actuators_node  pectoral_fin_actuators_topic
devel/lib/pkgconfig/: bmp180_topic.pc  pectoral_fin_actuators_topic.pc  right_fin_actuator.pc
devel/share/bmp180_topic/cmake/: bmp180_topicConfig.cmake
devel/share/pectoral_fin_actuators_topic/cmake/: pectoral_fin_actuators_topicConfig.cmake
devel/share/right_fin_actuator/cmake/: right_fin_actuatorConfig.cmake
src/bmp180_topic/: CMakeLists.txt  package.xml
src/bmp180_topic/launch/: bmp180.launch
src/bmp180_topic/src/: bmp180GetData.py  listenerTest.py
src/pectoral_fin_actuators_topic/: CMakeLists.txt  package.xml
src/pectoral_fin_actuators_topic/src/: .ActuatorMultiWave.h.swp  .actuator.cpp.swp  ActuatorMultiWave.h  PCA9685.cpp  Servo.cpp  Servo.h  actuator.cpp  leftActuator.cpp  rightActuator.cpp
